--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2559,107 +2559,107 @@ stories:
   domain: http://www.loganbanner.com/
   link: https://www.loganbanner.com/online_features/travel/more-major-artifacts-added-as-national-army-museum-takes-shape/image_e4cedb07-7a26-5836-a1e4-2e128c6ab9e1.html
 images:
-- name: aws-s3-stories-new-54-32-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-54-32-800-500-0-max-0--5--1.jpg
-- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
-- name: stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
-- name: wall-cannon-wall-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon.jpg
-- name: bluelake-bright-sand-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-01-17-38.jpg
-- name: liberty-back-statue-liberty-back-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
-- name: rockingchair-rockingchair-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crunch-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-- name: legal-statue-legalstatue-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kand-two.jpg
-- name: flower-barbed-wire-flower-barbed-wire-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-sunday.jpg
-- name: blossombar-alien-goggles-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-50-62.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-- name: mosaic-face-mosaic-face-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-5.jpg
-- name: machine-road-machine-road-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-monet-one.jpg
-- name: old-granary-field-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
-- name: docks-docks-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
-- name: amusement-park-amusement-park-2-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-pablo-blue.jpg
-- name: miamibeach-miamibeach-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crunch-paper.jpg
-- name: aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-- name: 35201856153_61bc075e4b-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-scream.jpg
-- name: yosemite-yosemite-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
-- name: downtown-trucksilo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-far-away.jpg
-- name: meadowbutterfly-meadow-butterfly-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-pond.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-- name: aws-s3-smithriver-smithriver-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still-600.jpg
-- name: razorwire-DSC-0080-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sunday.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
-- name: razorcliff-razorcliff-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-light-dali.jpg
-- name: nazi-invasion-IMG_8353.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8353.jpg
-- name: power-lines-power-lines-empty-space-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-horiz-circuit.jpg
-- name: stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-- name: old-granary-field-granaryfield-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-graham-sutherland.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
-- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-- name: oldhouse-oldhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-neo-instinct.jpg
-- name: liberty-back-statue-liberty-back-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-far-away.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-- name: capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-- name: amusement-park-amusement-park-2-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gred-mash.jpg
-- name: mistywoods-babyfoot-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crabapple.jpg
-- name: supreme-court-supremecourt-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
-- name: berlinwall-DSC-0084-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-brush.jpg
-- name: crow-crow-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
-- name: containership-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
-- name: victoria-victoria-corner-hotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-alien-goggles.jpg
-- name: locked-up-steam-lock-up-steam-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-neo-instinct.jpg
-- name: oldcabin-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
-- name: locked-up-steam-lock-up-steam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam.jpg
+- name: beach-clouds-lifeguard-beachclouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-far-away.jpg
+- name: old-door-lock-old-door-lock-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dark-rain.jpg
+- name: scream-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
+- name: white-house-whitehouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-colored-circuits.jpg
+- name: fence-fence-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-light-dali.jpg
+- name: art-museum-art-museum-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
+- name: gears-4882162452-fa3126b38d-b-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-clean-view.jpg
+- name: school-clouds-church-clouds-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gred-mash.jpg
+- name: adam-smith-adam-smith-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
+- name: aws-s3-square-border-traffic-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-border-traffic-square.jpg
+- name: old-church-oldchurch-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-pablo-blue.jpg
+- name: sand-hand-sand-hand-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
+- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+- name: store-on-corner-oldcabin-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-cinnamon-rolls.jpg
+- name: machine-road-machine-road-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-wav-pr.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy-square.jpg
+- name: flower-barbed-wire-flower-barbed-wire-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-matrix.jpg
+- name: downtown-los-angeles-downtown-la-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-matrix.JPG
+- name: downtheline-downtheline-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-oily-mcoilface.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
+- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
+- name: aws-s3-blossombar-blossombar-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-1200.png
+- name: abe-lincoln-one-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-00-00.jpg
+- name: dc-statue-dcstatue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
+- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
+- name: birdhouse-birdhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
+- name: blossombar-really-hot-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-50-62.jpg
+- name: stories-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit.jpg
+- name: old-cabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
+- name: crow_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crabapple.jpg
+- name: udnie-IMG_4674.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4674.jpg
+- name: old-granary-field-oldhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-smoking-cigarette.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+- name: oldcabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
+- name: trucksilo-trucksilo-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
+- name: dragon-desert-desert-dragon-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-jap-wav-pr.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-5.jpg
+- name: gypsymosaic-gypsy-eyes-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-granite.jpg
+- name: legal-statue-legalstatue-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-gred-mash.jpg
+- name: border-fence-border-fence-on-hill-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sand-paper.jpg
+- name: white-house-lawn-white-house-window-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-propaganda-leaflets.jpg
+- name: art-museum-art-museum-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-hot-spicy.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: power-lines-power-lines-empty-space-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-matrix.jpg
+- name: locked-up-steam-lock-up-steam-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dry-skin.jpg
+- name: old-gas-pumps-oldgaspumps-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-light-dali.jpg
+- name: oldcabin-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gan-vogh.jpg
+- name: downtown-los-angeles-downtown-la-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-atari-missle.JPG
 ---
 House Blaze May Be Connected To String Of Past Fires.&nbsp;Little League Baseball Moves To States This Week.&nbsp;Why Everything You Think You Know About Lightning Could Be Wrong.&nbsp;Condos Now Planned For Corner Site On First Hill.&nbsp;Russia's Flights Ban For Georgia Comes Into Effect.&nbsp;Iran Open To Diplomacy To Save Deal, But Has 'no Hope'.&nbsp;Supreme Court Defers To States On Gerrymandering.&nbsp;Businesses, Property Owners See Fewer Tourists Over Holiday.&nbsp;
